Remove extra run